--- a/src/assets/css/login.less
+++ b/src/assets/css/login.less
@@ -287,3 +287,15 @@ p {
     }
   }
 }
+
+.input-field {
+  position: relative;
+  .eyes {
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    height: 30px;
+  }
+}
