--- a/src/assets/css/card.less
+++ b/src/assets/css/card.less
@@ -1,12 +1,11 @@
 .hello {
   position: relative;
   border-radius: 20px;
-  transition: all .3s;
+  transition: all .5s;
   display: flex;
   justify-content: center;
   overflow: hidden;
   border: 2px solid #EDEDF0;
-
   cursor: pointer;
 }
 
@@ -19,8 +18,7 @@
   position: absolute;
   width: 120px;
   height: 120%;
-  background: #55a532;
-  overflow: hidden;
+  background: linear-gradient(63deg, #278341, #60a962, #93d184, #c6f9a8);
   margin-top: -40px;
   opacity: 0;
   animation: rotate 4s linear infinite;
