购买碳额度的tags

--- a/src/assets/css/card.less
+++ b/src/assets/css/card.less
@@ -49,3 +49,18 @@
     transform:rotate(360deg)
   }
 }
+
+// tags样式
+.box_tag {
+  display: flex;
+}
+
+.tag {
+  width: auto;
+  margin-right: 20px;
+  padding: 0 10px;
+  font-weight: 800;
+  border: 2px solid #000;
+  border-radius: 10px;
+  box-shadow: 5px 2px 15px rgba(0, 0, 0, 0.3);
+}
